<resources>
    <string name="app_name">Food Runner</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQS</string>
    <string name="logout">Logout</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order (Rs)</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="no_orders_placed">No Orders Placed</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">8f50909c96bbd1</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!</string>
    <string name="question1">Q1. How can I provide feedback ?</string>
    <string name="answer1">A1. You can mail us to tharunpattela5@gmail.com .</string>
    <string name="question2">Q2. Will it work like real ordering app?</string>
    <string name="answer2">A2. This app is made only for educational purpose.</string>
</resources>